--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "json2csv": "^5.0.7",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.2",
+    "mongoose-delete": "^0.5.4",
     "mongoose-slug-generator": "^1.0.4",
     "multer": "^1.4.4",
     "nodemailer": "^6.7.2"
