--- a/.env
+++ b/.env
@@ -7,6 +7,6 @@ refreshTokenLife = '7d'
 
 
 
-USER = 'nguyentiendat.testnode@gmail.com'
-PASS = 'dat123456'
+USER = 'datntgch18760@fpt.edu.vn'
+PASS = 'Nguyendat102'
 BASE_URL = 5000
