update email account

--- a/.env
+++ b/.env
@@ -7,6 +7,6 @@ refreshTokenLife = '7d'
 
 
 
-USER = 'datntgch18760@fpt.edu.vn'
-PASS = 'Nguyendat102'
+USER = 'ideasgreenwichhost@gmail.com'
+PASS = '123@123fpt'
 BASE_URL = 5000
