update link sendmail

--- a/.env
+++ b/.env
@@ -10,3 +10,4 @@ refreshTokenLife = '7d'
 USER = 'ideasgreenwichhost@gmail.com'
 PASS = '123@123fpt'
 BASE_URL = 5000
+URL = 'webideasfpt.netlify.app'
