--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 port = 5000
+DB = 'mongodb+srv://nguyentiendat12a8:sofm27112000@cluster0.qaz2s.mongodb.net/universityProject'
 TOKEN_KEY = "tiendat"
 REFRESH_TOKEN_KEY = "tiendatnguyen"
 
